脏矩形支持

--- a/src/exp/CanvasLineTest.html
+++ b/src/exp/CanvasLineTest.html
@@ -37,7 +37,7 @@
 
       start = 0;
       function  aa () {
-        console.log((new Date()).getTime() - start);
+        // console.log((new Date()).getTime() - start);
         // start = (new Date()).getTime();
         // for (var i = 0; i < 10000; ++i) {
         //   a = a * i;
@@ -46,8 +46,8 @@
         //   a = a - 0.23;
         // }
         // context.globalCompositeOperation = 'destination-over';
-        for (var i = 0; i < 1; ++i) {
-          context.drawImage(img2, 0, 0, 500, 500, 100, 100, 500, 500);
+        for (var i = 0; i < 100; ++i) {
+          // context.drawImage(img2, 0, 0);
           // if (i % 2 === 0) {
           //   context.drawImage(img, 50, 50);
           // } else {
