--- a/homyo_data_structure/test.html
+++ b/homyo_data_structure/test.html
@@ -7,31 +7,36 @@
 <body>
 <canvas id="a"></canvas>
 <script>
-    var begin;
-    window.onload = function () {
-      console.log((new Date()).getTime() - begin);
-    }
+    // var begin;
+    // window.onload = function () {
+    //   console.log((new Date()).getTime() - begin);
+    // }
+    //
+    // var canvas = document.getElementById('a');
+    // var context = canvas.getContext('2d');
+    //
+    // var b = 0;
+    // begin = (new Date()).getTime();
+    // for (var i = 0; i < 1000000; ++i) {
+    //   var a = i / 1000000;
+    //   if (a != b) {
+    //     b = a;
+    //   }
+    // }
+    // console.log((new Date()).getTime() - begin);
+    //
+    // begin = (new Date()).getTime();
+    // for (var i = 0; i < 1000000; ++i) {
+    //   context.setTransform(1, 0, 0, 0, 1, 0);
+    // }
+    // console.log((new Date()).getTime() - begin);
+    //
+    // begin = (new Date()).getTime();
 
-    var canvas = document.getElementById('a');
-    var context = canvas.getContext('2d');
-
-    var b = 0;
-    begin = (new Date()).getTime();
-    for (var i = 0; i < 1000000; ++i) {
-      var a = i / 1000000;
-      if (a != b) {
-        b = a;
-      }
-    }
-    console.log((new Date()).getTime() - begin);
-
-    begin = (new Date()).getTime();
-    for (var i = 0; i < 1000000; ++i) {
-      context.setTransform(1, 0, 0, 0, 1, 0);
-    }
-    console.log((new Date()).getTime() - begin);
-
-    begin = (new Date()).getTime();
+    var a = 1;
+    var b = - a;
+    console.log(a);
+    console.log(b);
 
 </script>
 </body>
