--- a/test/game/index.html
+++ b/test/game/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="main"></canvas>
-<script src="main.js"></script>
+<canvas id="app"></canvas>
+<script src="app.js"></script>
 </body>
 </html>
