--- a/test/game/index.html
+++ b/test/game/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id="app"></canvas>
+<canvas id="app" width="800" height="600"></canvas>
 <script src="app.js"></script>
 </body>
 </html>
