--- a/test/exp/Function.html
+++ b/test/exp/Function.html
@@ -11,16 +11,26 @@
       var prev = (new Date()).getTime();
       var now;
       var count = 0;
-      el.addEventListener('touchstart', function (e) {
+      el.addEventListener('mousedown', function (e) {
         var start = (new Date()).getTime();
         for (var i = 0; i < 6000; ++i) {
           el.getBoundingClientRect()
         }
         console.log('yaya', (new Date()).getTime() - start);
-        console.log(e);
-        console.log('page', e.pageX, e.pageY);
-        console.log('client', e.clientX, e.clientY);
-        console.log('offset', e.offsetX, e.offsetY);
+
+        var queue = [];
+        var start = (new Date()).getTime();
+        for (var i = 0; i < 60000; ++i) {
+          queue.push({
+            x: 0,
+            y: 0,
+            width: 11,
+            height: 200,
+            test: 'feafeageawgeaiofjeiaowhgioaehggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg'
+          });
+        }
+        console.log('aaaa', (new Date()).getTime() - start);
+
 
         // now = (new Date()).getTime();
         // if (now > prev + 1000) {
